# ArcanaVision

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
api/: main.py  schemas.py
api/routes/: reading.py  spreads.py  story_image.py
scripts/: generate_card_art.py  generate_style_test.py  validate_assets.py
src/arcanavision/: __init__.py  config.py
src/arcanavision/bot/: __main__.py  cli.py
src/arcanavision/cards/: deck.py  models.py
src/arcanavision/cards/data/: tarot_deck.json
src/arcanavision/imagegen/: composer.py  story_image.py
src/arcanavision/reading/: interpreter.py  models.py
src/arcanavision/reading/prompts/: reading_prompt.txt
src/arcanavision/spreads/: engine.py  models.py
src/arcanavision/spreads/definitions/: celtic_cross.yaml  daily_draw.yaml  four_elements.yaml  relationship.yaml  three_card.yaml  timeline.yaml
tests/: test_composer.py  test_deck.py  test_reading.py  test_spread.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.jsx
web/src/components/: OrbLoader.jsx  Ornaments.jsx  Particles.jsx  QuestionInput.jsx  ReadingResult.jsx  ShuffleAnimation.jsx  SpreadSelector.jsx  TarotCard.jsx  TypewriterText.jsx
web/src/hooks/: useReading.js
web/src/styles/: animations.css  global.css  typography.css  variables.css
web/src/utils/: api.js
